--- a/client/src/styles/Login.css
+++ b/client/src/styles/Login.css
@@ -1,56 +1,38 @@
-.login {
-  display: flex;
-  background-color: white !important;
-  overflow-y: hidden;
-}
-.login-left {
-  width: 100%;
+.login{
   height: 100vh;
-  background-color: rgb(236, 248, 252);
 }
-.login-right {
-  width: 100%;
-}
-.small-text {
-  margin: 0 30%;
-  font-size: 12px;
-  color: rgb(95, 95, 95);
-}
-.small-text > button {
-  background-color: white;
-  border: none;
-  color: rgb(18, 26, 70);
-  padding: 0;
-  font-size: 12px;
-}
-.login-img {
-  position: absolute;
-  top: 3vh;
-  left: 70vw;
-  width: 8%;
+.hero-background-container{
+  background-color: black;
+  position: fixed;
+  top: 0;
+  height: 100%;
+  z-index: -1;
 }
 .hero-background {
-  width: 100%;
-  position: relative;
-  top: 10%;
+  opacity: 0.6;
+  width: 100vw;
+  height: 100%;
+   object-fit: cover;
 }
-.hero {
-  position: relative;
-  z-index: 1;
-  bottom: 40%;
-  left: 30%;
+
+.login-logo{
+  height: 50px;
+  margin: 2% 5%;
+
 }
-@media only screen and (max-width: 989px) {
-  .login-left{
-    width: 0%;
+@media only screen and (max-width: 700px) {
+  .login{
+    width: 100vw;
+    height: 100%;
   }
-  .login-left > img {
-    width: 0;
+  .hero-background{
+    opacity:0;
   }
-  .login-img{
-    left: 40vw;
-    width: 20vw;
+  .hero-background-container{
+    height: 100%;
+    width: 100%;
   }
-
-
+  .login-logo{
+    margin-top: 8%;
+  }
 }
