--- a/client/src/styles/LoginForm.css
+++ b/client/src/styles/LoginForm.css
@@ -1,25 +1,28 @@
 .login-form {
-  margin: 20% 30% 3% 30%;
+  width: 500px;
+  margin: auto;
+  padding: 3% 5%;
+  background-color: rgba(0,0,0,.75);
+  color: white;
 }
 .login-form > form {
   display: flex;
   flex-direction: column;
-
-  margin: 0 0%;
+  margin: 0%;
 }
 .login-form > h1 {
   font-family: sans-serif;
   font-weight: 700;
-  color: rgb(20, 20, 20);
+  color:white;
 }
 .login-form > h2 {
-  color: rgb(112, 112, 112);
+  color: white;
   font-weight: lighter;
   font-size: 13px;
   font-family: sans-serif;
 }
 .login-form > form > label {
-  color: rgb (51, 51, 51);
+  color: white;
   padding: 10px 0;
 }
 .login-form > form > input {
@@ -32,12 +35,36 @@
   margin: 20px 0;
   padding: 15px;
   border: none;
-  border-radius: 10px;
-  background-color: rgb(18, 26, 70);
+  border-radius: 5px;
+  background-color: red;
   font-family: sans-serif;
-  font-size: 15px;
+  font-weight: bold;
+  font-size: 20px;
   color: white;
 }
-.errors {
-  color: red;
+.error {
+  color: white;
+  background-color: #E87C03;
+  width: 100%;
+  border-radius: 10px;
+  padding: 10px;
+  font-weight: bold;
+}
+
+.login-text{
+  color: white;
+    font-size: 15px;
+}
+.small-text > button {
+  background-color: rgba(0,0,0, 0);
+  color: white;
+  border: none;
+  font-weight: bold;
+}
+
+@media only screen and (max-width: 700px) {
+ .login-form {
+  margin: auto;
+  width: 100%;
+ }
 }
