--- a/client/src/styles/Footer.css
+++ b/client/src/styles/Footer.css
@@ -4,9 +4,9 @@
 
 .footer-container {
   padding: 5% 20% 1% 20%;
-  width: 100vw;
   background-color: rgb(14, 13, 13);
   color: rgb(196, 196, 196);
+  max-width: 100vw;
 }
 .footer-icons {
   padding-left: 3%;
@@ -48,7 +48,7 @@
   padding-top: 2%;
 }
 
-/* @media only screen and (max-width: 700px) {
+@media only screen and (max-width: 700px) {
  .footer-container {
     width: 100%;
     padding: 10px 0;
@@ -56,4 +56,4 @@
     bottom: -50%;
  }
 
-} */
+}
