--- a/client/src/styles/Profile.css
+++ b/client/src/styles/Profile.css
@@ -1,6 +1,7 @@
 .profile{
     background-color: rgb(20,20,20);
     height: 100vh;
+    overflow:hidden;
 }
 .profile > h1{
     color: white;
@@ -68,6 +69,22 @@
 .profile-link{
     text-decoration: none;
 }
+@media only screen and (max-width: 1000px) {
+
+   .profile{
+    padding-top: 25%;
+   }
+    .user-profile > img {
+        max-height: 100px;
+        border-radius: 5px;
+    }
+    .add-img{
+    max-height: 100px;
+    
+}
+
+
+}
 @media only screen and (max-width: 700px) {
 
     .profile > h1{
@@ -75,10 +92,13 @@
         font-size: 40px;
     }
     .user-profile > img {
-        max-height: 100px;
-        max-width: 100px;
+        max-height: 50px;
         border-radius: 5px;
     }
+    .add-img{
+    max-height: 50px;
+    
+}
     .user-profile > h1{
         font-size: 15px;
     }
@@ -88,4 +108,12 @@
     padding: 5px 15px;
     margin-top: 20%;
     }
+    .user-profiles{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 5% 20%;
+    width: 100%;
+    text-align: center;
+}
 }
