--- a/client/src/styles/Browse.css
+++ b/client/src/styles/Browse.css
@@ -1,4 +1,5 @@
 
+
 /****************/
 /* HERO */
 /****************/
@@ -70,4 +71,24 @@
 }
 .more-info-button:hover {
   background: rgba(46, 46, 46, 90%);
+}
+
+/****************/
+/* MOVIE SLIDERS */
+/****************/
+
+
+#MovieGroups {
+  background-color: rgb(14, 13, 13);
+  overflow:hidden;
+  display: block;
+  position: relative;
+  z-index: 0;
+  padding-bottom: 15%;
+}
+
+.movie-group-classifier {
+  color: rgb(221, 219, 219);
+  padding-left: 3%;
+  font-size: 2vw;
 }
